--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "debounce": "^1.2.1",
     "react": "^17.0.2",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/debounce": "^1.2.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
