--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@types/react-slick": "^0.23.7",
     "debounce": "^1.2.1",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
