--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-slick": "^0.23.7",
     "debounce": "^1.2.1",
+    "framer-motion": "^5.3.0",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-animated-slider": "^2.0.0",
@@ -18,7 +19,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "next",
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
