--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "next",
     "react-slick": "^0.28.1",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.7",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
@@ -37,6 +39,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
+    "@types/react-window": "^1.8.5",
+    "@types/react-window-infinite-loader": "^1.0.5",
     "sass": "^1.43.2",
     "typescript": "^4.1.2"
   },
