--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "next",
+    "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.7",
